--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -39,16 +39,18 @@
   font-family: "Roboto", sans-serif;
   padding: 0.75rem;
   border: none;
-  border-radius: 2px;
+  border-radius: 4px;
   margin-right: 0.25rem;
-  font-size: 0.75rem;
-  box-shadow: 1px 1px 3px #dcdfec;
+  font-size: 0.85rem;
+  box-shadow: 0px 2px 8px #dddee2;
   margin: 0.5rem 0;
 }
 
-.vacancies {
+.vacancies-list {
+  width: 100%;
   display: flex;
-  flex-flow: column nowrap;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
@@ -67,10 +69,5 @@
 
   .controls {
     width: 30%;
-  }
-
-  .vacancies {
-    width: 70%;
-    padding: 1rem 0 2rem 2rem;
   }
 }
